# Homework_2.14

./: .gitignore  README.md  main.py  pyproject.toml
Django/: pyproject.toml
Django/hw10/: manage.py
Django/hw10/app_quotes/: admin.py  forms.py  models.py  urls.py  views.py
Django/hw10/app_quotes/migrations/: 0001_initial.py
Django/hw10/app_quotes/templates/app_quotes/: about_author.html  add_author.html  add_quote.html  base.html  index.html
Django/hw10/app_users/: forms.py  urls.py  views.py
Django/hw10/app_users/templates/app_users/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html
Django/hw10/hw10/: asgi.py  settings.py  urls.py  wsgi.py
Django/hw10/seeds/: get_data_from_json.py  soup.py
Django/hw10/seeds/json_data/: authors.json
Rest-API/: LICENSE  docker-compose.yml  main.py
Rest-API/migrations/versions/: 59b0f66059fd_init.py
Rest-API/postgres-data/base/13458/: pg_internal.init
Rest-API/postgres-data/global/: 1260  pg_control
Rest-API/postgres-data/pg_stat_tmp/: db_13458.stat  global.stat
Rest-API/src/database/: models.py  seed.py
Rest-API/src/repository/: users.py
Rest-API/src/routes/: users.py
Rest-API/src/services/: send_email.py
docs/: conf.py  index.rst
postgres-data/: postmaster.pid
postgres-data/global/: pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat
src/: schemas.py
src/config/: config.py
src/database/: db.py  seed.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  messages.py  send_email.py
tests/: conftest.py  test_root.py  test_route_auth.py  test_route_contacts.py  test_unit_repository_contacts.py  test_unit_repository_users.py
