[tool.poetry]
name = "homework-2-14"
version = "0.1.0"
description = ""
authors = ["Serhii Pidkopai <spodkopay@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_2"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"
fastapi = "^0.94.1"
sqlalchemy = "^2.0.6"
uvicorn = "^0.21.0"
redis = "^4.5.1"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.32.0"
passlib = "^1.7.4"
jose = "^1.0.0"
fastapi-mail = "^1.2.6"
pyjwt = "^2.6.0"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
