[tool.poetry]
name = "homework-2-12"
version = "0.1.0"
description = ""
authors = ["Serhii Pidkopai <spodkopay@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_2"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
sqlalchemy = "^2.0.4"
faker = "^17.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
uvicorn = {extras = ["standard"], version = "^0.20.0"}
alembic = "^1.9.4"
psycopg2-binary = "^2.9.5"
pydantic = {extras = ["email"], version = "^1.10.5"}
jose = "^1.0.0"
python-multipart = "^0.0.5"
libgravatar = "^1.0.3"
python-dotenv = "^1.0.0"
fastapi-mail = "^1.2.6"
redis = "^4.5.1"
asyncio = "^3.4.3"
fastapi-limiter = "^0.1.5"
asyncio-redis = "^0.16.0"
cloudinary = "^1.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
