[tool.poetry]
name = "homework-2-13-2"
version = "0.1.0"
description = ""
authors = ["Serhii Pidkopai <spodkopay@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_2"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.6"
psycopg2-binary = "^2.9.5"
requests = "^2.28.2"
bs4 = "^0.0.1"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
